Fix font on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -180,16 +180,22 @@ body {
 }
 
 .textClick {
-  padding-top: 380px;
-  /*margin-top: 37%;*/
-  /*color: #f6f6f7;*/
+  margin: 380px 30px 0 30px;
   color: rgb(247,247,240);
   font-size: 50px;
 }
+
 #createTableBtn {
   color: rgb(51,51,51);
   font-weight: bold;
   border: 1px solid black;
   border-radius: 50%;
   background-color: rgba(30,130,76,1);
+}
+
+@media screen and (max-width: 768px) {
+  .textClick {
+      margin-top: 250px;
+      font-size: 25px;
+  }
 }
